conversão das imagens de PNG para o formato WebP

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./imgs/icons/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
+    <meta name="description" content="Transforme sua jornada fitness na PrimeFit - Uma academia dedicada ao seu bem-estar físico e mental. Oferecemos treinamentos especializados, equipamentos modernos e um ambiente acolhedor. Alcance seus objetivos de forma saudável e eficaz com a PrimeFit.">
     <title>PrimeFit</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <div class="container-lg-header">
             <nav class="nav navbar-expand-lg pl-5 pr-5">
                 <a class="navbar-brand" href="#">
-                    <h1 class="d-flex"><b>PrimeFit</b><img src="./imgs/icons/peso.png" alt="Logo da primeFit"></h1>
+                    <h1 class="d-flex"><b>PrimeFit</b><img src="./imgs/icons/peso.webp" alt="Logo da primeFit"></h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
                     <span class="navbar-toggler-icon">
@@ -49,9 +50,9 @@
                         </button>
                     </div>
                     <div class="image">
-                        <img class="slider-img" src="./imgs/banner/banner01.png" alt="imagem do banner 1">
-                        <img class="slider-img" src="./imgs/banner/banner02.png" alt="imagem do banner 2">
-                        <img class="slider-img" src="./imgs/banner/banner03.png" alt="imagem do banner 3">
+                        <img class="slider-img" src="./imgs/banner/banner01.webp" alt="imagem do banner 1">
+                        <img class="slider-img" src="./imgs/banner/banner02.webp" alt="imagem do banner 2">
+                        <img class="slider-img" src="./imgs/banner/banner03.webp" alt="imagem do banner 3">
                     </div>
             </div>
         </section>
@@ -59,7 +60,7 @@
             <div class="numbers-animation-container container-lg d-flex justify-content-center align-items-center">
                 <div class="d-flex justify-content-around align-items-center">
                     <div class="mr-3">
-                        <img src="./imgs/icons/Academia.png" alt="icone de academia">
+                        <img src="./imgs/icons/Academia.webp" alt="icone de academia">
                     </div>
                     <div class="numbers-animation-text d-flex justify-content-center align-items-start">
                         <h2 class="number-title mr-2">130</h2>
@@ -68,7 +69,7 @@
                 </div>
                 <div class="d-flex justify-content-around align-items-center">
                     <div class="mr-3">
-                        <img src="./imgs/icons/clientes.png" alt="icone de clientes">
+                        <img src="./imgs/icons/clientes.webp" alt="icone de clientes">
                     </div>
                     <div class="numbers-animation-text d-flex justify-content-center align-items-start">
                         <h2 class="number-title mr-2">949</h2>
@@ -77,7 +78,7 @@
                 </div>
                 <div class="d-flex justify-content-around align-items-center">
                     <div class="mr-3">
-                        <img src="./imgs/icons/model.png" alt="icone de 25 anos de academia">
+                        <img src="./imgs/icons/model.webp" alt="icone de 25 anos de academia">
                     </div>
                     <div class="numbers-animation-text d-flex justify-content-center align-items-start">
                         <h2 class="number-title mr-2">25</h2>
@@ -86,7 +87,7 @@
                 </div>
                 <div class="d-flex justify-content-around align-items-center">
                     <div class="mr-3">
-                        <img src="./imgs/icons/personais.png" alt="icone de quantidade de personais">
+                        <img src="./imgs/icons/personais.webp" alt="icone de quantidade de personais">
                     </div>
                     <div class="numbers-animation-text d-flex justify-content-center align-items-start">
                         <h2 class="number-title mr-2">320</h2>
@@ -104,7 +105,7 @@
                 </div>
                 <div class="container-services d-flex justify-content-center align-items-center">
                    <div class="card" tabindex="0">
-                        <img src="./imgs/servicos/musculacao3.jpg" alt="imagem de musculação">
+                        <img src="./imgs/servicos/musculacao3.webp" alt="imagem de musculação">
                         <div class="Tipo-de-treino d-flex mt-2">
                             <p class="mr-3">Treinamento</p>
                             <p>Força</p>
@@ -112,7 +113,7 @@
                         <h5><b>Musculação</b></h5>
                     </div>
                     <div class="card" tabindex="0">
-                        <img src="./imgs/servicos/ginastica3.png" alt="imagem de funcional">
+                        <img src="./imgs/servicos/ginastica3.webp" alt="imagem de funcional">
                         <div class="Tipo-de-treino d-flex mt-2">
                             <p class="mr-3">Treinamento</p>
                             <p>Resistência</p>
@@ -120,7 +121,7 @@
                         <h5><b>Funcional</b></h5>
                     </div>
                     <div class="card" tabindex="0">
-                        <img src="./imgs/servicos/funcional.png"  alt="imagem de persoal trainer">
+                        <img src="./imgs/servicos/funcional.webp"  alt="imagem de persoal trainer">
                         <div class="Tipo-de-treino d-flex mt-2">
                             <p class="mr-3">Treinamento</p>
                             <p>Resistência</p>
@@ -135,7 +136,7 @@
                 <div class="structures container-lg ml-5 mr-5">
                     <div class="structures-container d-flex justify-content-center align-items-center">
                         <div class="structures-card" tabindex="0">
-                            <img class="card-img-top" src="./imgs/estrutores/team-img-1.jpg" alt="Imagem do profissional">
+                            <img class="card-img-top" src="./imgs/estrutores/team-img-1.webp" alt="Imagem do profissional">
                             <div class="card-body">
                                 <p>treinadora de crossfit</p>
                                 <h5>Jessica</h5>
@@ -148,7 +149,7 @@
                             <div class="structures-effect"></div>
                         </div>
                         <div class="structures-card" tabindex="0">
-                            <img class="card-img-top" src="./imgs/estrutores/team-img-2.jpg" alt="Imagem do profissional">
+                            <img class="card-img-top" src="./imgs/estrutores/team-img-2.webp" alt="Imagem do profissional">
                             <div class="card-body">
                                 <p>treinador de musculção</p>
                                 <h5>Ramon</h5>
@@ -161,7 +162,7 @@
                             <div class="structures-effect"></div>
                         </div>
                         <div class="structures-card" tabindex="0">
-                            <img class="card-img-top" src="./imgs/estrutores/team-img-3.jpg" alt="imagem do profissional">
+                            <img class="card-img-top" src="./imgs/estrutores/team-img-3.webp" alt="imagem do profissional">
                             <div class="card-body">
                                 <p>treinadora de musculação</p>
                                 <h5>Juliana</h5>
@@ -174,7 +175,7 @@
                             <div class="structures-effect"></div>
                         </div>
                         <div class="structures-card" tabindex="0">
-                            <img class="card-img-top" src="./imgs/estrutores/team-img-4.jpg" alt="imagem do profissional">
+                            <img class="card-img-top" src="./imgs/estrutores/team-img-4.webp" alt="imagem do profissional">
                             <div class="card-body">
                                 <p>treinadora de ginástica</p>
                                 <h5>Nayara</h5>
@@ -187,7 +188,7 @@
                             <div class="structures-effect"></div>
                         </div>
                         <div class="structures-card" tabindex="0">
-                            <img class="card-img-top" src="./imgs/estrutores/team-img-5.jpg" alt="imagem do profissional">
+                            <img class="card-img-top" src="./imgs/estrutores/team-img-5.webp" alt="imagem do profissional">
                             <div class="card-body">
                                 <p>treinador de musculação</p>
                                 <h5>Robson</h5>
@@ -204,10 +205,10 @@
                 <div class="banner-g container-lg">
                     <div class="row">
                         <div class="col" tabindex="0">
-                            <img src="./imgs/model1.jpg" alt="imagem de modelos fitnes">
+                            <img src="./imgs/model1.webp" alt="imagem de modelos fitnes">
                         </div>
                         <div class="col" tabindex="0">
-                            <img src="./imgs/model3.png" alt="imagem de um ciclista em ação">
+                            <img src="./imgs/model3.webp" alt="imagem de um ciclista em ação">
                         </div>
                     </div>
                 </div>
@@ -224,7 +225,7 @@
                 </div>
                     <div class="slider" tabindex="0">
                         <div class="mr-5">
-                                <img src="./imgs/depoimentos/depoimento1.jpg" alt="imagem da aluna 1">
+                                <img src="./imgs/depoimentos/depoimento1.webp" alt="imagem da aluna 1">
                         </div>
                         <div>
                             <div class="texto-depoimento">
@@ -255,7 +256,7 @@
                     </div>
                     <div class="slider" tabindex="0">
                         <div class="mr-5">
-                                <img src="./imgs/depoimentos/depoimento2.jpg" alt="imagem da aluna 2">
+                                <img src="./imgs/depoimentos/depoimento2.webp" alt="imagem da aluna 2">
                         </div>
                         <div>
                             <div class="texto-depoimento">
@@ -286,7 +287,7 @@
                     </div>
                     <div class="slider" tabindex="0">
                         <div class="mr-5">
-                                <img src="./imgs/depoimentos/depoimento3.jpg" alt="imagem da aluna 3">
+                                <img src="./imgs/depoimentos/depoimento3.webp" alt="imagem da aluna 3">
                         </div>
                         <div>
                             <div class="texto-depoimento">
@@ -342,13 +343,13 @@
                 </div>
             </div>
         </section>
-        <section id="plans" class="plans container-lg" style="width: 100%; height: 888px; background-image: url(./imgs/cards-plans/banne2.png); background-size: cover; background-repeat: no-repeat; background-position: center;">
+        <section id="plans" class="plans container-lg" style="width: 100%; height: 888px; background-image: url(./imgs/cards-plans/banne2.webp); background-size: cover; background-repeat: no-repeat; background-position: center;">
             <div class="title-plans container d-flex flex-column">
                 <h2><b>Nossos Planos</b></h2>
                 <p>Nossos Serviços Personalizados para Seu Sucesso Fitness.</p>
             </div>
            <div class="container-plans-bg d-flex justify-content-center mx-auto">
-                <div class="card-plans" style="background-image: url(./imgs/cards-plans/price5.jfif); background-size: cover;">
+                <div class="card-plans" style="background-image: url(./imgs/cards-plans/price5.webp); background-size: cover;">
                     <div class="container-plans">
                         <div>
                             <h4>Plano Básico</h4>
@@ -381,7 +382,7 @@
                         <button type="button" class="btn btn-outline-secondary">Assinar</button>
                     </div>
                 </div>
-                <div class="card-plans" style="background-image: url(./imgs/cards-plans/price-2.jpg); background-size: cover;">
+                <div class="card-plans" style="background-image: url(./imgs/cards-plans/price-2.webp); background-size: cover;">
                     <div class="container-plans">
                         <div>
                             <h4>Plano Padrão</h4>
@@ -414,7 +415,7 @@
                         <button type="button" class="btn btn-outline-secondary">Assinar</button>
                     </div>
                 </div>
-                <div class="card-plans p-5" style="background-image: url(./imgs/cards-plans/price4.jpg); background-size: cover;">
+                <div class="card-plans p-5" style="background-image: url(./imgs/cards-plans/price4.webp); background-size: cover;">
                     <div class="container-plans">
                         <div>
                             <h4>Plano Final</h4>
