--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <p>
                             Transforme seu corpo, supere limites e alcance seus objetivos conosco!
                         </p>
-                        <button type="button" class="btn btn-dark col-4 p-3 d-flex justify-content-center align-items-center" id="enviarMensagem" aria-label="Enviar mensagem via WhatsApp">
+                        <button type="button" class="btn btn-dark col-4 p-3 d-flex justify-content-center align-items-center" id="enviarMensagem" aria-label="enviar mensagem">
                                 Enviar Mensagem
                                 <i class="fab fa-whatsapp ml-2" title="Ícone de whatsapp"></i>
                         </button>
@@ -139,7 +139,7 @@
                             <img class="card-img-top" src="./imgs/estrutores/team-img-1.webp" alt="Imagem do profissional">
                             <div class="card-body">
                                 <p>treinadora de crossfit</p>
-                                <h5>Jessica</h5>
+                                <h3>Jessica</h3>
                             </div>
                             <ul class="structures-icons">
                                 <li><i class="fab fa-twitter"></i></li>
@@ -152,7 +152,7 @@
                             <img class="card-img-top" src="./imgs/estrutores/team-img-2.webp" alt="Imagem do profissional">
                             <div class="card-body">
                                 <p>treinador de musculção</p>
-                                <h5>Ramon</h5>
+                                <h3>Ramon</h3>
                             </div>
                             <ul class="structures-icons">
                                 <li><i class="fab fa-twitter"></i></li>
@@ -165,7 +165,7 @@
                             <img class="card-img-top" src="./imgs/estrutores/team-img-3.webp" alt="imagem do profissional">
                             <div class="card-body">
                                 <p>treinadora de musculação</p>
-                                <h5>Juliana</h5>
+                                <h3>Juliana</h3>
                             </div>
                             <ul class="structures-icons">
                                 <li><i class="fab fa-twitter"></i></li>
@@ -178,7 +178,7 @@
                             <img class="card-img-top" src="./imgs/estrutores/team-img-4.webp" alt="imagem do profissional">
                             <div class="card-body">
                                 <p>treinadora de ginástica</p>
-                                <h5>Nayara</h5>
+                                <h3>Nayara</h3>
                             </div>
                             <ul class="structures-icons">
                                 <li><i class="fab fa-twitter"></i></li>
@@ -191,7 +191,7 @@
                             <img class="card-img-top" src="./imgs/estrutores/team-img-5.webp" alt="imagem do profissional">
                             <div class="card-body">
                                 <p>treinador de musculação</p>
-                                <h5>Robson</h5>
+                                <h3>Robson</h3>
                             </div>
                             <ul class="structures-icons">
                                 <li><i class="fab fa-twitter"></i></li>
@@ -357,7 +357,7 @@
                         </div>
                         <div>
                             <p>Por 1 mês</p>
-                            <h5><b>R$99</b></h5>
+                            <h4><b>R$99</b></h4>
                         </div>
                     </div>
                     <ul class="list-group list-group-flush">
@@ -390,7 +390,7 @@
                         </div>
                         <div>
                             <p>Por 6 meses</p>
-                            <h5><b>R$450</b></h5>
+                            <h4><b>R$450</b></h4>
                         </div>
                     </div>
                     <ul class="list-group list-group-flush">
@@ -423,7 +423,7 @@
                         </div>
                         <div>
                             <p>Por 1 ano</p>
-                            <h5><b>R$750</b></h5>
+                            <h4><b>R$750</b></h4>
                         </div>
                     </div>
                     <ul class="list-group list-group-flush" >
@@ -478,7 +478,7 @@
                     </h2>
                     <div>
                         <h3>Mensagem via whatsapp</h3>
-                        <button type="button" class="btn btn-success" id="enviarMensagem" aria-label="Enviar mensagem via WhatsApp">
+                        <button type="button" class="btn btn-success" id="enviarMensagem" aria-label="Mensagem via Whatsapp">
                             Enviar<i class="fab fa-whatsapp ml-2" title="Ícone de whatsapp"></i>
                         </button>
                     </div>
@@ -540,7 +540,7 @@
                 <p>Termos e Condições</p>
             </div>
         </div>
-        <button id="scrollTopButton" class="scrollTop">
+        <button id="scrollTopButton" class="scrollTop" aria-label="Ir para o topo da página">
             <i class="fas fa-arrow-up"></i>
         </button>
     </footer>
