--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <p>
                             Transforme seu corpo, supere limites e alcance seus objetivos conosco!
                         </p>
-                        <button type="button" class="btn btn-dark col-4 p-3 d-flex justify-content-center align-items-center" id="enviarMensagem" aria-label="enviar mensagem">
+                        <button type="button" class="btn btn-dark col-4 p-3 d-flex justify-content-center align-items-center" id="enviarMensagem" aria-label="Enviar mensagem">
                                 Enviar Mensagem
                                 <i class="fab fa-whatsapp ml-2" title="Ícone de whatsapp"></i>
                         </button>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="container-services d-flex justify-content-center align-items-center">
                    <div class="card" tabindex="0">
-                        <img src="./imgs/servicos/musculacao3.webp" alt="imagem de musculação">
+                        <img src="./imgs/servicos/musculacao.webp" alt="imagem de musculação">
                         <div class="Tipo-de-treino d-flex mt-2">
                             <p class="mr-3">Treinamento</p>
                             <p>Força</p>
@@ -113,7 +113,7 @@
                         <h3><b>Musculação</b></h3>
                     </div>
                     <div class="card" tabindex="0">
-                        <img src="./imgs/servicos/ginastica3.webp" alt="imagem de funcional">
+                        <img src="./imgs/servicos/ginastica.webp" alt="imagem de funcional">
                         <div class="Tipo-de-treino d-flex mt-2">
                             <p class="mr-3">Treinamento</p>
                             <p>Resistência</p>
@@ -225,7 +225,7 @@
                 </div>
                     <div class="slider" tabindex="0">
                         <div class="mr-5">
-                                <img src="./imgs/depoimentos/depoimento1.webp" alt="imagem da aluna 1">
+                                <img src="./imgs/depoimentos/depoimento11.webp" alt="imagem da aluna 1">
                         </div>
                         <div>
                             <div class="texto-depoimento">
@@ -256,7 +256,7 @@
                     </div>
                     <div class="slider" tabindex="0">
                         <div class="mr-5">
-                                <img src="./imgs/depoimentos/depoimento2.webp" alt="imagem da aluna 2">
+                                <img src="./imgs/depoimentos/depoimento22.webp" alt="imagem da aluna 2">
                         </div>
                         <div>
                             <div class="texto-depoimento">
@@ -287,7 +287,7 @@
                     </div>
                     <div class="slider" tabindex="0">
                         <div class="mr-5">
-                                <img src="./imgs/depoimentos/depoimento3.webp" alt="imagem da aluna 3">
+                                <img src="./imgs/depoimentos/depoimento33.webp" alt="imagem da aluna 3">
                         </div>
                         <div>
                             <div class="texto-depoimento">
@@ -349,7 +349,7 @@
                 <p>Nossos Serviços Personalizados para Seu Sucesso Fitness.</p>
             </div>
            <div class="container-plans-bg d-flex justify-content-center mx-auto">
-                <div class="card-plans" style="background-image: url(./imgs/cards-plans/price5.webp); background-size: cover;">
+                <div class="card-plans" style="background-image: url(./imgs/cards-plans/price55.webp); background-size: cover;">
                     <div class="container-plans">
                         <div>
                             <h3>Plano Básico</h3>
@@ -415,7 +415,7 @@
                         <button type="button" class="btn btn-outline-secondary">Assinar</button>
                     </div>
                 </div>
-                <div class="card-plans p-5" style="background-image: url(./imgs/cards-plans/price4.webp); background-size: cover;">
+                <div class="card-plans p-5" style="background-image: url(./imgs/cards-plans/price44.webp); background-size: cover;">
                     <div class="container-plans">
                         <div>
                             <h3>Plano Final</h3>
@@ -478,7 +478,7 @@
                     </h2>
                     <div>
                         <h3>Mensagem via whatsapp</h3>
-                        <button type="button" class="btn btn-success" id="enviarMensagem" aria-label="Mensagem via Whatsapp">
+                        <button type="button" class="btn btn-success" id="enviarMensagem" a           ria-label="Enviar">
                             Enviar<i class="fab fa-whatsapp ml-2" title="Ícone de whatsapp"></i>
                         </button>
                     </div>
