--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container-lg-header">
             <nav class="nav navbar-expand-lg pl-5 pr-5">
                 <a class="navbar-brand" href="#">
-                    <h1 class="d-flex"><b>PrimeFit</b><img src="./imgs/icons/peso.webp" alt="Logo da primeFit"></h1>
+                    <h1 class="d-flex"><b>PrimeFit</b><img src="./imgs/icons/peso1.webp" alt="Logo da primeFit"></h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
                     <span class="navbar-toggler-icon">
