--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
         </section>
         <section id="services" class="numbers-animation-bg container-lg">
-            <div class="numbers-animation-container container-lg d-flex justify-content-center align-items-center">
+            <div class="numbers-animation-container container-lg d-flex justify-content-center align-items-center flex-column flex-wrap flex-lg-row flex-md-row">
                 <div class="d-flex justify-content-around align-items-center">
                     <div class="mr-3">
                         <img src="./imgs/icons/Academia.webp" alt="icone de academia">
@@ -103,7 +103,7 @@
                     <h2><b>Descubra a Excelência</b></h2>
                     <p>Nossos Serviços Personalizados para Seu Sucesso Fitness.</p>
                 </div>
-                <div class="container-services d-flex justify-content-center align-items-center">
+                <div class="container-services d-flex justify-content-center align-items-center flex-column flex-lg-row">
                    <div class="card" tabindex="0">
                         <img src="./imgs/servicos/musculacao.webp" alt="imagem de musculação">
                         <div class="Tipo-de-treino d-flex mt-2">
@@ -134,7 +134,7 @@
                     <p class="mx-auto mt-2">Transforme-se com profissionais prontos para impulsionar sua jornada fitness. Descubra o extraordinário em nossa academia.</p>
                 </div>
                 <div class="structures container-lg ml-5 mr-5">
-                    <div class="structures-container d-flex justify-content-center align-items-center">
+                    <div class="structures-container d-flex justify-content-center align-items-center flex-column flex-lg-row">
                         <div class="structures-card" tabindex="0">
                             <img class="card-img-top" src="./imgs/estrutores/team-img-1.webp" alt="Imagem do profissional">
                             <div class="card-body">
@@ -151,7 +151,7 @@
                         <div class="structures-card" tabindex="0">
                             <img class="card-img-top" src="./imgs/estrutores/team-img-2.webp" alt="Imagem do profissional">
                             <div class="card-body">
-                                <p>treinador de musculção</p>
+                                <p>treinador de musculação</p>
                                 <h3>Ramon</h3>
                             </div>
                             <ul class="structures-icons">
@@ -203,11 +203,11 @@
                     </div>
                 </div>
                 <div class="banner-g container-lg">
-                    <div class="row">
-                        <div class="col" tabindex="0">
+                    <div class="row col">
+                        <div class="col-lg" tabindex="0">
                             <img src="./imgs/model1.webp" alt="imagem de modelos fitnes">
                         </div>
-                        <div class="col" tabindex="0">
+                        <div class="col-lg" tabindex="0">
                             <img src="./imgs/model3.webp" alt="imagem de um ciclista em ação">
                         </div>
                     </div>
@@ -322,7 +322,7 @@
             </div>
         </section>
         <section class="calculadora-bg container-lg d-flex">
-            <div class="d-flex justify-content-center align-items-center mx-auto">
+            <div class="d-flex justify-content-center align-items-center mx-auto flex-column flex-lg-row">
                 <div class="calculadora-contaitaner-img">
                     <i class="fas fa-dumbbell" title="Ícone de haltere"></i>
                 </div>
@@ -343,12 +343,12 @@
                 </div>
             </div>
         </section>
-        <section id="plans" class="plans container-lg" style="width: 100%; height: 888px; background-image: url(./imgs/cards-plans/banne2.webp); background-size: cover; background-repeat: no-repeat; background-position: center;">
+        <section id="plans" class="plans container-lg" style="width: 100%; height: 100vh; background-image: url(./imgs/cards-plans/banne2.webp); background-size: cover; background-repeat: no-repeat; background-position: center;">
             <div class="title-plans container d-flex flex-column">
                 <h2><b>Nossos Planos</b></h2>
                 <p>Nossos Serviços Personalizados para Seu Sucesso Fitness.</p>
             </div>
-           <div class="container-plans-bg d-flex justify-content-center mx-auto">
+           <div class="container-plans-bg d-flex justify-content-center mx-auto flex-column flex-lg-row">
                 <div class="card-plans" style="background-image: url(./imgs/cards-plans/price55.webp); background-size: cover;">
                     <div class="container-plans">
                         <div>
@@ -463,7 +463,7 @@
                     </p>
                 </div>
             </div>
-            <div class="contact-info d-flex justify-content-center align-items-start">
+            <div class="contact-info d-flex justify-content-center align-items-start flex-column flex-lg-row">
                 <div class="barra">
                 </div>
                 <address class="contact-middle d-flex flex-column">
@@ -519,7 +519,7 @@
         </section>
     </main>
     <footer class="footer-bg container-lg">
-        <div class="container d-flex justify-content-between align-items-center mx-auto">
+        <div class="container d-flex justify-content-between align-items-center mx-auto flex-column flex-lg-row">
             <div class="copyright">
                 <p class="d-flex">
                     © 2023 - Code by  
