--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="container-lg-header">
-            <nav class="nav navbar-expand-lg pl-5 pr-5">
+            <nav class="nav navbar-expand-lg pl-lg-5 pr-lg-5 pl-2 pg-2 d-flex justify-content-between align-items-center">
                 <a class="navbar-brand" href="#">
                     <h1 class="d-flex"><b>PrimeFit</b><img src="./imgs/icons/peso1.webp" alt="Logo da primeFit"></h1>
                 </a>
@@ -20,7 +20,7 @@
                         <i class="fas fa-bars"></i>
                     </span>
                 </button>
-                <div class="js-menu collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li><a href="./index.html" class="nav-link">Home</a></li>
                         <li><a href="#services" class="nav-link">Sobre</a></li>
