Aprimorando responsividade no banner

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <p>
                             Transforme seu corpo, supere limites e alcance seus objetivos conosco!
                         </p>
-                        <button type="button" class="btn btn-dark col-4 p-3 d-flex justify-content-center align-items-center" id="enviarMensagem" aria-label="Enviar mensagem">
+                        <button type="button" class="btn btn-dark col-lg-4 col-7 p-3 d-flex justify-content-center align-items-center" id="enviarMensagem" aria-label="Enviar mensagem">
                                 Enviar Mensagem
                                 <i class="fab fa-whatsapp ml-2" title="Ícone de whatsapp"></i>
                         </button>
