--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container-lg-header">
             <nav class="nav navbar-expand-lg pl-lg-5 pr-lg-5 pl-2 pg-2 d-flex justify-content-between align-items-center">
                 <a class="navbar-brand" href="#">
-                    <h1 class="d-flex"><b>PrimeFit</b><img src="./imgs/icons/peso1.webp" alt="Logo da primeFit"></h1>
+                    <h1 class="d-flex pl-lg-0 pr-lg-0 pl-2 pg-2"><b>PrimeFit</b><img src="./imgs/icons/peso1.webp" alt="Logo da primeFit"></h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
                     <span class="navbar-toggler-icon">
@@ -21,7 +21,7 @@
                     </span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav pl-lg-0 pr-lg-0 pl-2 pg-2">
                         <li><a href="./index.html" class="nav-link">Home</a></li>
                         <li><a href="#services" class="nav-link">Sobre</a></li>
                         <li><a href="#plans" class="nav-link">Planos</a></li>
@@ -44,7 +44,7 @@
                         <p>
                             Transforme seu corpo, supere limites e alcance seus objetivos conosco!
                         </p>
-                        <button type="button" class="btn btn-dark col-lg-4 col-7 p-3 d-flex justify-content-center align-items-center" id="enviarMensagem" aria-label="Enviar mensagem">
+                        <button type="button" class="btn btn-dark col-lg-4 col-sm-6 col-8 p-3 d-flex justify-content-center align-items-center" id="enviarMensagem" aria-label="Enviar mensagem">
                                 Enviar Mensagem
                                 <i class="fab fa-whatsapp ml-2" title="Ícone de whatsapp"></i>
                         </button>
@@ -97,7 +97,6 @@
             </div>
         </section>
         <section class="services container-lg">
-        
             <div>
                 <div class="services-text d-flex flex-column mx-auto">
                     <h2><b>Descubra a Excelência</b></h2>
