--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="container-lg-header">
-            <nav class="nav navbar-expand-lg pl-lg-5 pr-lg-5 pl-2 pg-2 d-flex justify-content-between align-items-center">
+            <nav class="nav navbar-expand-lg pl-lg-5 pr-lg-5 pl-3 pr-3 d-flex justify-content-between align-items-center">
                 <a class="navbar-brand" href="#">
                     <h1 class="d-flex pl-lg-0 pr-lg-0 pl-2 pg-2"><b>PrimeFit</b><img src="./imgs/icons/peso1.webp" alt="Logo da primeFit"></h1>
                 </a>
@@ -128,7 +128,7 @@
                         <h3><b>Ginastica</b></h3>
                     </div>
                 </div>
-                <div class="structures-text container-lg d-flex flex-column mx-auto">
+                <div class="structures-text container-lg d-flex flex-column mx-auto pl-3 pr-3">
                     <h2 class="mx-auto"><b>conheça nossos profissionais</b></h2>
                     <p class="mx-auto mt-2">Transforme-se com profissionais prontos para impulsionar sua jornada fitness. Descubra o extraordinário em nossa academia.</p>
                 </div>
@@ -220,10 +220,10 @@
             </div>
             <div class="container-lg d-flex justify-content-center align-items-center">
                 <div id="voltar">
-                    <i class="next-banck mr-5 fas fa-chevron-left" id="prev-button"></i>
+                    <i class="next-banck m-sm-0 m-md-3 m-lg-5 fas fa-chevron-left" id="prev-button"></i>
                 </div>
-                    <div class="slider" tabindex="0">
-                        <div class="mr-5">
+                    <div class="slider container-cometario flex-column flex-md-row flex-lg-row" tabindex="0">
+                        <div class="mr-5  ml-5">
                                 <img src="./imgs/depoimentos/depoimento11.webp" alt="imagem da aluna 1">
                         </div>
                         <div>
@@ -236,7 +236,7 @@
                             </div>
                             <div class="container-cliente">
                                 <p>juliana torres</p>
-                                <div class="d-flex justify-content-start align-items-center">
+                                <div class="d-flex justify-content-center justify-content-lg-start align-items-center">
                                     <p class="nota-depoimento">
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
@@ -316,7 +316,7 @@
                         </div>
                     </div>
                 <div id="avancar">
-                    <i class="next-banck ml-5 fas fa-chevron-right" id="next-button"></i>
+                    <i class="next-banck m-sm-0 m-md-3 m-lg-5 fas fa-chevron-right" id="next-button"></i>
                 </div>
             </div>
         </section>
