--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="slider" tabindex="0">
-                        <div class="mr-5">
+                    <div class="slider container-cometario flex-column flex-md-row flex-lg-row" tabindex="0">
+                        <div class="mr-5  ml-5">
                                 <img src="./imgs/depoimentos/depoimento22.webp" alt="imagem da aluna 2">
                         </div>
                         <div>
@@ -267,7 +267,7 @@
                             </div>
                             <div class="container-cliente">
                                 <p>jessica gomes</p>
-                                <div class="d-flex justify-content-start align-items-center">
+                                <div class="d-flex justify-content-center justify-content-lg-start align-items-center">
                                     <p class="nota-depoimento">
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
@@ -284,8 +284,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="slider" tabindex="0">
-                        <div class="mr-5">
+                    <div class="slider container-cometario flex-column flex-md-row flex-lg-row" tabindex="0">
+                        <div class="mr-5  ml-5">
                                 <img src="./imgs/depoimentos/depoimento33.webp" alt="imagem da aluna 3">
                         </div>
                         <div>
@@ -298,7 +298,7 @@
                             </div>
                             <div class="container-cliente">
                                 <p>paula pereira</p>
-                                <div class="d-flex justify-content-start align-items-center">
+                                <div class="d-flex justify-content-center justify-content-lg-start align-items-center">
                                     <p class="nota-depoimento">
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
