--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-                    <ul class="navbar-nav pl-lg-0 pr-lg-0 pl-2 pg-2">
+                    <ul class="js-menu navbar-nav pl-lg-0 pr-lg-0 pl-2 pg-2">
                         <li><a href="./index.html" class="nav-link">Home</a></li>
                         <li><a href="#services" class="nav-link">Sobre</a></li>
                         <li><a href="#plans" class="nav-link">Planos</a></li>
@@ -450,7 +450,7 @@
             </div>
         </section>
         <section id="contact" class="contact container-lg">
-            <div class="contact-title container d-flex justify-content-between align-items-center">
+            <div class="contact-title container d-flex flex-lg-row flex-md-row flex-column justify-content-between align-items-center">
                 <div >
                     <h2 class="d-flex">
                         <b>PrimeFit</b><img src="./imgs/icons/peso.png" alt="imagem de um haltere">
@@ -462,10 +462,10 @@
                     </p>
                 </div>
             </div>
-            <div class="contact-info d-flex justify-content-center align-items-start flex-column flex-lg-row">
+            <div class="contact-info d-flex justify-content-center align-items-center align-items-lg-start flex-column flex-lg-row">
                 <div class="barra">
                 </div>
-                <address class="contact-middle d-flex flex-column">
+                <address class="contact-middle d-flex justify-content-center align-items-center align-items-lg-start flex-column">
                     <p>
                         contate-nos<i class="fas fa-phone ml-1" title="icone de telefone"></i>
                     </p>
