--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </section>
         <section class="services container-lg">
             <div>
-                <div class="services-text d-flex flex-column mx-auto">
+                <div class="services-text d-flex flex-column mx-auto pr-1 pl-1">
                     <h2><b>Descubra a Excelência</b></h2>
                     <p>Nossos Serviços Personalizados para Seu Sucesso Fitness.</p>
                 </div>
@@ -128,11 +128,11 @@
                         <h3><b>Ginastica</b></h3>
                     </div>
                 </div>
-                <div class="structures-text container-lg d-flex flex-column mx-auto pl-3 pr-3">
+                <div class="structures-text container-lg d-flex justify-content-center align-items-center flex-column mx-auto pl-3 pr-3">
                     <h2 class="mx-auto"><b>conheça nossos profissionais</b></h2>
-                    <p class="mx-auto mt-2">Transforme-se com profissionais prontos para impulsionar sua jornada fitness. Descubra o extraordinário em nossa academia.</p>
+                    <p class="mx-auto">Transforme-se com profissionais prontos para impulsionar sua jornada fitness. Descubra o extraordinário em nossa academia.</p>
                 </div>
-                <div class="structures container-lg ml-5 mr-5">
+                <div class="structures container-lg ml-2 mr-2 ml-md-3 mr-md-3 ml-lg-5 mr-lg-5">
                     <div class="structures-container d-flex justify-content-center align-items-center flex-column flex-lg-row">
                         <div class="structures-card" tabindex="0">
                             <img class="card-img-top" src="./imgs/estrutores/team-img-1.webp" alt="Imagem do profissional">
@@ -520,7 +520,7 @@
     <footer class="footer-bg container-lg">
         <div class="container d-flex justify-content-between align-items-center mx-auto flex-column flex-lg-row">
             <div class="copyright">
-                <p class="d-flex">
+                <p class="d-flex flex-column flex-md-row flex-lg-row">
                     © 2023 - Code by  
                     <a class="d-flex align-items-center ml-1" href="https://www.linkedin.com/in/lucaass1997/" target="_blank">
                         Lucas Gomes.<i class="fab fa-linkedin ml-1" title="icone do linkedin"></i>
@@ -534,7 +534,7 @@
                     <li><i class="fab fa-facebook-f" title="Ícone de facebook"></i></li>
                 </ul>
             </div>
-            <div class="footer-termos d-flex">
+            <div class="footer-termos d-flex flex-column flex-md-row flex-lg-row">
                 <p>política de Privacidade</p>
                 <p>Termos e Condições</p>
             </div>
