--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <h2><b>Descubra a Excelência</b></h2>
                     <p>Nossos Serviços Personalizados para Seu Sucesso Fitness.</p>
                 </div>
-                <div class="container-services d-flex justify-content-center align-items-center flex-column flex-lg-row">
+                <div class="container-services d-flex justify-content-center align-items-center flex-column flex-lg-row ml-4 mr-4">
                    <div class="card" tabindex="0">
                         <img src="./imgs/servicos/musculacao.webp" alt="imagem de musculação">
                         <div class="Tipo-de-treino d-flex mt-2">
