--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     </div>
                 </div>
                 <div class="banner-g container-lg">
-                    <div class="row col">
+                    <div class="row">
                         <div class="col-lg" tabindex="0">
                             <img src="./imgs/model1.webp" alt="imagem de modelos fitnes">
                         </div>
@@ -220,7 +220,7 @@
             </div>
             <div class="container-lg d-flex justify-content-center align-items-center">
                 <div id="voltar">
-                    <i class="next-banck m-sm-0 m-md-3 m-lg-5 fas fa-chevron-left" id="prev-button"></i>
+                    <i class="next-banck m-1 m-md-3 m-lg-5 fas fa-chevron-left" id="prev-button"></i>
                 </div>
                     <div class="slider container-cometario flex-column flex-md-row flex-lg-row" tabindex="0">
                         <div class="mr-5  ml-5">
@@ -316,7 +316,7 @@
                         </div>
                     </div>
                 <div id="avancar">
-                    <i class="next-banck m-sm-0 m-md-3 m-lg-5 fas fa-chevron-right" id="next-button"></i>
+                    <i class="next-banck m-1 m-md-3 m-lg-5 fas fa-chevron-right" id="next-button"></i>
                 </div>
             </div>
         </section>
@@ -342,12 +342,12 @@
                 </div>
             </div>
         </section>
-        <section id="plans" class="plans container-lg" style="width: 100%; height: 100vh; background-image: url(./imgs/cards-plans/banne2.webp); background-size: cover; background-repeat: no-repeat; background-position: center;">
-            <div class="title-plans container d-flex flex-column">
+        <section id="plans" class="plans container-lg d-flex justify-content-center align-items-center flex-column flex-md-row flex-lg-row" style="width: 100%; height: 100vh; background-image: url(./imgs/cards-plans/banne2.webp); background-size: cover; background-repeat: no-repeat; background-position: center;">
+            <div class="title-plans container d-flex justify-content-center align-items-center flex-column pl-2 pr-2 pl-md-3 pr-md-3 pl-lg-0 pr-lg-0">
                 <h2><b>Nossos Planos</b></h2>
                 <p>Nossos Serviços Personalizados para Seu Sucesso Fitness.</p>
             </div>
-           <div class="container-plans-bg d-flex justify-content-center mx-auto flex-column flex-lg-row">
+           <div class="container-plans-bg d-flex justify-content-center flex-column flex-md-row flex-lg-row pl-2 pr-2 pl-md-3 pr-md-3 pl-lg-0 pr-lg-0">
                 <div class="card-plans" style="background-image: url(./imgs/cards-plans/price55.webp); background-size: cover;">
                     <div class="container-plans">
                         <div>
@@ -374,7 +374,7 @@
                         </li>
                         <li class="list-group-item">
                             <i class="fas fa-check-circle"></i>
-                            Ficha de treino personalizado
+                            Treino personalizado
                         </li>
                     </ul>
                     <div class="card-footer">
@@ -407,7 +407,7 @@
                         </li>
                         <li class="list-group-item">
                             <i class="fas fa-check-circle"></i>
-                            Ficha de treino personalizado
+                            Treino personalizado
                         </li>
                     </ul>
                     <div class="card-footer">
@@ -440,7 +440,7 @@
                         </li>
                         <li class="list-group-item">
                             <i class="fas fa-check-circle"></i>
-                            Ficha de treino personalizado
+                            Treino personalizado
                         </li>
                     </ul>
                     <div class="card-footer">
