--- a/html/blog.html
+++ b/html/blog.html
@@ -44,9 +44,14 @@
         </section>
     </main>
     <footer class="footer-bg container-lg">
-        <div class="container d-flex justify-content-between align-items-center mx-auto">
+        <div class="container d-flex justify-content-between align-items-center mx-auto flex-column flex-lg-row">
             <div class="copyright">
-                <p>© 2023 - Code by Lucas Gomes.</p>
+                <p class="d-flex flex-column flex-md-row flex-lg-row">
+                    © 2023 - Code by  
+                    <a class="d-flex align-items-center ml-1" href="https://www.linkedin.com/in/lucaass1997/" target="_blank">
+                        Lucas Gomes.<i class="fab fa-linkedin ml-1" title="icone do linkedin"></i>
+                    </a>
+                </p>
             </div>
             <div class="footer-redes-sociais d-flex align-items-center">
                 <ul class="d-flex justify-content-center align-items-center">
@@ -55,12 +60,12 @@
                     <li><i class="fab fa-facebook-f" title="Ícone de facebook"></i></li>
                 </ul>
             </div>
-            <div class="footer-termos d-flex">
+            <div class="footer-termos d-flex flex-column flex-md-row flex-lg-row">
                 <p>política de Privacidade</p>
                 <p>Termos e Condições</p>
             </div>
         </div>
-        <button id="scrollTopButton" class="scrollTop">
+        <button id="scrollTopButton" class="scrollTop" aria-label="Ir para o topo da página">
             <i class="fas fa-arrow-up"></i>
         </button>
     </footer>
