deletando arquivos e ajustando responsividade

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-                    <ul class="js-menu navbar-nav pl-lg-0 pr-lg-0 pl-2 pg-2">
+                    <ul class="js-menu navbar-nav d-flex justify-content-center align-items-start pl-lg-0 pr-lg-0 pl-2 pr-2">
                         <li><a href="./index.html" class="nav-link">Home</a></li>
                         <li><a href="#services" class="nav-link">Sobre</a></li>
                         <li><a href="#plans" class="nav-link">Planos</a></li>
@@ -453,7 +453,7 @@
             <div class="contact-title container d-flex flex-lg-row flex-md-row flex-column justify-content-between align-items-center">
                 <div >
                     <h2 class="d-flex">
-                        <b>PrimeFit</b><img src="./imgs/icons/peso.png" alt="imagem de um haltere">
+                        <b>PrimeFit</b><img src="./imgs/icons/peso.webp" alt="imagem de um haltere">
                     </h2>
                 </div>
                 <div>
