--- a/html/blog.html
+++ b/html/blog.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <div class="container-lg-header">
-            <nav class="nav navbar-expand-lg pl-5 pr-5">
+            <nav class="nav navbar-expand-lg pl-lg-5 pr-lg-5 pl-3 pr-3 d-flex justify-content-between align-items-center">
                 <a class="navbar-brand" href="../index.html" target="_parent">
-                    <h1 class="d-flex"><b>PrimeFit</b><img src="../imgs/icons/peso.png" alt="Logo da primeFit"></h1>
+                    <h1 class="d-flex pl-lg-0 pr-lg-0 pl-2 pg-2"><b>PrimeFit</b><img src="../imgs/icons/peso1.webp" alt="Logo da primeFit"></h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
                     <span class="navbar-toggler-icon">
@@ -20,7 +20,7 @@
                     </span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
+                    <ul class="js-menu navbar-nav d-flex justify-content-center align-items-start pl-lg-0 pr-lg-0 pl-2 pr-2">
                         <li><a href="../index.html" target="_parent" class="nav-link">Home</a></li>
                         <li><a href="../index.html" target="_parent" class="nav-link">Sobre</a></li>
                         <li><a href="../index.html" target="_parent" class="nav-link">Planos</a></li>
@@ -34,7 +34,7 @@
     <main>
         <section class="container-lg blog-bg">
             <article class="container">
-                <div class="blog-introducao mx-auto">
+                <div class="blog-introducao d-flex flex-column justify-content-center align-items-center mx-auto">
                     <h1>Bem-vindo ao PrimeFit Saúde</h1>
                     <h2>Descubra o Melhor para o Seu Dia a Dia em Nosso Blog!</h2>
                 </div>
