--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
         <section class="banner container-lg">
             <div class="container">
-                    <div class="text-banner">
+                    <div class="text-banner pl-lg-5 pr-lg-5 pl-3 pr-3">
                         <h1>
                             <b>
                                 melhor <span class="detail"><b>programa</b></span> para melhores resultados
